# wikigame

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-graph.yml  release.yml
assets/: index.html
src/: build_cmd.rs  download.rs  fetch.rs  graph.rs  main.rs  progress.rs  search.rs  setup.rs  stats.rs  web.rs
src/parse/: linktarget.rs  mod.rs  page.rs  pagelinks.rs
